# HCMUS_AutoEncoderCUDA

./: .gitignore  CMakeLists.txt  README.md  report.ipynb  report.md
include/: autoencoder.h  constants.h  layer.h
include/autoencoder/: convolution.h  core.h  layers.h
include/helper/: GPU_helper.h  gpu_helper.h
scripts/: kvm-cifar10.ipynb
src/: evaluate.cpp  evaluate.cu  evaluate_cpu.cpp  extract_features.cu  hello.cpp  main.cpp  main.cu  main_cpu.cpp
src/convolution/: convolution.h  convolution_cpu.cpp  convolution_gpu.cpp  convolution_gpu.cu
src/convolution/base/: convolution_base.h
src/convolution/cpu/: convolution_cpu.cpp  convolution_cpu.h
src/convolution/gpu/: convolution_gpu.cu  convolution_gpu.h
src/core/: cifar_reader.h  network.cpp  network.cu  network.h  optimizer.cpp  optimizer.cu  optimizer.h  tensor.cu  tensor.h
src/layer/: layer.cpp  layer.cu  layer.h
src/layer/activation/: relu.cu  relu.h
src/layer/activation/cpu/: relu.cpp
src/layer/activation/gpu/: relu.cu
src/layer/base/: layer_base.cu  layer_base.h
src/layer/conv/: conv2d.cu  conv2d.h
src/layer/conv/cpu/: conv2d.cpp
src/layer/conv/gpu/: conv2d.cu
src/layer/input/: input.h
src/layer/input/cpu/: input.cpp
src/layer/input/gpu/: input.cu
src/layer/output/: output.h
src/layer/output/cpu/: output.cpp
src/layer/output/gpu/: output.cu
src/layer/pooling/: maxpool2d.cu  maxpool2d.h
src/layer/pooling/cpu/: maxpool2d.cpp
src/layer/pooling/gpu/: maxpool2d.cu
src/layer/upsampling/: upsample2d.cu  upsample2d.h
src/layer/upsampling/cpu/: upsample2d.cpp
src/layer/upsampling/gpu/: upsample2d.cu
src/planar/: planar.h
